# xcurator

./: LICENSE  README.md
application/: .gitignore  README.md
application/clip-http-service/: .gitignore  Dockerfile  LICENCE  README.md  pylintrc  pyproject.toml
application/clip-http-service/src/: OpenCLIPText.py  main.py
application/clip-http-service/src/resources/: application.yml
application/graphql-gateway-service/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  tsconfig.json
application/graphql-gateway-service/lib/: auth-schema.ts  authClient.ts  configureKeycloak.ts  constants.ts  createApolloServer.ts  createServer.ts  index.ts  util.ts  ws.ts
application/graphql-gateway-service/lib/middleware/: actuator.ts
application/graphql-gateway-service/lib/types/: 3pc-express-actuator.d.ts  context.ts  express-session.d.ts
application/xcurator-service/: .dockerignore  README.md  build.gradle.kts  lombok.config  settings.gradle.kts
application/xcurator-solution/: .gitignore  README.md
application/xcurator-solution/deployment/: docker-compose.yaml  mongo-init.js  monstache.config.toml  xcurator-compose.sh
application/xcurator-solution/deployment/devscripts/: 1_download_enrichment_json.sh  1_optional_subset_of_big_json.sh  2_import_json_to_mongodb.sh  3_recreate_repopulate_elastic_index.sh  4_full_artefact_mongo_and_elastic_import.sh  DEV_2_import_json_to_mongodb.sh  DEV_3_recreate_repopulate_elastic_index.sh  clean_index.sh  create_index.sh
application/xcurator-solution/deployment/elasticsearch-init/: daily-snapshots.json  elastic-mapping-artefact.json  fs_backup.json  role-xcurator.json
application/xcurator-solution/deployment/nginx/: .htpasswd  default.conf.template
application/xcurator-web/: .dockerignore  .editorconfig  .eslintrc.json  .gitignore  .helmignore  .npmrc  .prettierignore  Dockerfile  README.md  codegen.ts  jest.config.ts  next.config.js  package.json  tsconfig.json
application/xcurator-web/.husky/: pre-commit
application/xcurator-web/messages/: de.json  en.json  nl.json
application/xcurator-web/pages/: 404.tsx  500.tsx  _app.tsx  _document.tsx  about.tsx  impressum.tsx  index.tsx  onboarding.tsx  styles.tsx  terms-of-use.tsx
application/xcurator-web/src/: apollo-client.ts  global-styles.ts
data-enrichment/: README.md  artefact-schema.json  docker-compose.yml  named-entity.json  pipline.excalidraw
data-enrichment/0-artefact-core-import/: .dockerignore  Dockerfile  README.md  artefact-core-schema.json  import.excalidraw  pyproject.toml
data-enrichment/0-artefact-core-import/src/: ap.py  blm.py  iiif_handler.py  import-script.py
data-enrichment/0-artefact-core-import/src/resources/: blm_objs_w_country.json
data-enrichment/0-artefact-core-import/tests/: test_ap.py  test_blm.py  test_iiif_handler.py
data-enrichment/0-core-import/: Dockerfile  docker-compose.yml  pyproject.toml
data-enrichment/0-core-import/src/: ap.py  import-script.py
data-enrichment/1-artefact-color/: Dockerfile  README.md  pyproject.toml
data-enrichment/1-artefact-color/src/color/: hsv_repository.py
data-enrichment/1-artefact-color/src/models/: image_input.py
data-enrichment/1-artefact-color/src/resources/: application.yml
data-enrichment/1-artefact-color/src/segmentation/: u2net.py
data-enrichment/1-artefact-color/tests/: test_bugs.py  test_image_handler.py  test_resource_manager.py
data-enrichment/1-artefact-embedding/: Dockerfile  README.md  embedding.excalidraw  pyproject.toml
data-enrichment/1-artefact-embedding/src/: PickleRepository.py  clip-script.py  file_util.py  image.py
data-enrichment/1-artefact-embedding/src/embeddings/: OpenCLIPText.py  image_decoder.py  image_encoder.py  multimodal_encoder.py  text_encoder.py
data-enrichment/1-artefact-embedding/src/generate/: coca_decoder.py
data-enrichment/1-artefact-embedding/src/images/: default_image_handler.py  image_dataset.py  image_handler.py
data-enrichment/1-artefact-embedding/src/models/: clip_output.py
data-enrichment/1-artefact-embedding/tests/: conftest.py  test_pickle_repository.py
data-enrichment/1-artefact-embedding/tests/generate/: test_coca_decoder.py
data-enrichment/1-artefact-embedding/tests/images/: test_default_image_handler.py
data-enrichment/1-artefact-embedding/tests/texts/: test_open_clip_text_handler.py
data-enrichment/1-artefact-object-color/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
data-enrichment/1-artefact-object-color/model/: download_model.sh
data-enrichment/1-artefact-object-color/src/: enrichment-script.py  image_handler.py
data-enrichment/1-artefact-object-color/tests/: conftest.py  markdown_file_creator.py  test_application.py  test_application_config.py
data-enrichment/1-translation/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  translation.excalidraw
data-enrichment/1-translation/src/: deepltranslator.py  translate_artefacts.py
data-enrichment/1-visual-embedding/: Dockerfile  pyproject.toml
data-enrichment/2-entity-linking/: .dockerignore  .gitignore  Dockerfile  README.md
data-enrichment/2-entity-linking/data/: blacklist.csv  get.sh  nexus_repository.sh  wikidata_to_wikipedia.json
data-enrichment/2-entity-linking/src/: enrichment-script.py  gnd_linker.py  location_finder.py
data-enrichment/2-entity-linking/tests/: test_entity_linker_flair.py  test_entity_linker_rel.py
data-enrichment/2_entity_linking/: pyproject.toml
data-enrichment/2_entity_linking/src/linking/: entity_linker_flair.py  mention_detection_rel.py
data-enrichment/2_entity_linking/src/report/: build-report.py
data-enrichment/2_entity_linking/tests/resources/: xcurator-text.json
data-enrichment/3-finalize/: .dockerignore  .gitignore  LICENCE  README.md
data-enrichment/3-finalize/data/: xcurator.artefact_ids.csv
data-enrichment/3-finalize/src/: data_merge.py
data-enrichment/3_finalize/: Dockerfile  pyproject.toml
data-enrichment/3_finalize/src/: data_merge.py
data-enrichment/doc/: pipline.excalidraw
doc/: architecture.drawio
(+484 files in other folders)
